rest clients